--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: edb24fc
-_src_path: https://github.com/open-synergy/ssi-addons-repo-template.git
+_commit: 9bee604
+_src_path: gh:open-synergy/ssi-addons-repo-template
 dependency_installation_mode: OCA
 generate_requirements_txt: true
 include_aeroo_report: false
